--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # サイト設定
-title: サブスリーへのラン日記
-description: 陸上未経験アラフォー市民ランナーのラン日記
+title: "サブスリーへのラン日記"
+description: "陸上未経験アラフォー市民ランナーのラン日記"
 author: kwaz
 email: kwazthanks@gmail.com
 baseurl: "/kwaz_run.github.io"　# サブディレクトリの場合のみ設定
